* Moved the pretty URL initialization code to the installer, removing the need to do it from the admin area. Also greatly simplified the code internally. (install.php, install.sql, ManageSettings.php, PrettyUrls-Filters.php, Subs-PrettyUrls.php, Subs.php, Admin.template.php, Admin.language.php) * Saved a few bytes from CDATA parsing in feeds. Well, only in case a ]]> sign is used in posts. Which probably never happens. (Feed.php) * Just changing text-align to right for the sidebar in Warm. Looks a bit better... Unsure though. (Warm/index.css) ! Fixed mismatched closing tag in Warm definition. (Warm/settings.xml)

--- a/Themes/default/styles/Warm/index.css
+++ b/Themes/default/styles/Warm/index.css
@@ -174,3 +174,6 @@ $alphamix = rgb(241,243,234)
 $main_bg  = rgb(241,243,234)
 $main_bg  = rgb(246,248,239)
 $head_bg  = rgba(233,235,186,.66)
+
+#sidebar
+	text-align: right
